Fixed the issue of the game of life canvas sometimes not showing up

--- a/blog/game-of-life/game-of-life.css
+++ b/blog/game-of-life/game-of-life.css
@@ -17,6 +17,7 @@
     }
 
 #board-canvas {
+    background-image: url("grid-fallback.png");
     margin-bottom: 100px;
 }
 
